--- a/miPrimeraApiRest/package.json
+++ b/miPrimeraApiRest/package.json
@@ -2,7 +2,7 @@
   "name": "miprimeraapirest",
   "version": "1.0.0",
   "description": "Primera Api Rest Task",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/index.js"
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.29.1"
   }
 }
